infra/argocd/argo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: traefik
  listeners:
    - protocol: HTTP
      port: 8000
      name: argocd-server
      allowedRoutes:
        namespaces:
          from: Same
